# sports-prediction-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yaml
docs/: about.html  game.html  index.html
docs/assets/: app.js  game.js  navbar.js  style.css
docs/data/nba/: manifest.json  metrics.json
docs/data/nba/predictions/: 2025-11-17_NOP_GSW.json  2025-11-18_CLE_MIL.json  2025-11-18_DEN_CHI.json  2025-11-18_DET_IND.json  2025-11-18_MIA_NYK.json  2025-11-18_MIN_DAL.json  2025-11-18_NOP_OKC.json  2025-11-18_PHI_LAC.json  2025-11-18_TOR_CHA.json  2025-11-19_ATL_DET.json  2025-11-19_BKN_BOS.json  2025-11-19_LAL_UTA.json  2025-11-19_ORL_GSW.json  2025-11-19_POR_PHX.json  2025-11-19_SAS_MEM.json  2025-11-20_CLE_HOU.json  2025-11-20_DAL_NYK.json  2025-11-20_IND_CHA.json  2025-11-20_MIA_GSW.json  2025-11-20_MIN_WAS.json  2025-11-20_NOP_DEN.json  2025-11-20_OKC_SAC.json  2025-11-20_PHI_TOR.json  2025-11-20_POR_CHI.json  2025-11-21_MEM_SAC.json  2025-11-21_MIL_PHI.json  2025-11-21_ORL_LAC.json  2025-11-21_SAS_ATL.json  2025-11-22_BOS_BKN.json  2025-11-22_CHA_LAC.json  2025-11-22_CHI_MIA.json  2025-11-22_CLE_IND.json  2025-11-22_DAL_NOP.json  2025-11-22_GSW_POR.json  2025-11-22_HOU_DEN.json  2025-11-22_ORL_NYK.json  2025-11-22_PHX_MIN.json  2025-11-22_TOR_WAS.json  (+867 more)
docs/data/nhl/: manifest.json  metrics.json  predictions_flat.json  results_flat.json
notebooks/: eval_calibration copy.ipynb  eval_calibration.ipynb  utils.py
schemas/: prediction.schema.json  result.schema.json
scripts/: compute_metrics.py  constatnts.py  validate_data.py
(+3141 files in other folders)
